--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -18,6 +18,7 @@ on:
 jobs:
   scrape:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -29,6 +30,13 @@ jobs:
       - name: Install dependencies
         run: |
           pip install undetected-chromedriver selenium pandas
+
+      # 🧩 Fix Chrome / ChromeDriver version mismatch
+      - name: Fix Chrome version mismatch
+        run: |
+          pip install undetected-chromedriver==3.5.5
+          google-chrome --version || chromium-browser --version
+          python -m undetected_chromedriver --version
 
       - name: Run Scraper
         run: |
