--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install undetected-chromedriver selenium pandas
+          pip install undetected-chromedriver==3.5.5 selenium pandas
 
       # 🧩 Fix Chrome / ChromeDriver version mismatch
       - name: Fix Chrome version mismatch
