--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,51 +1,47 @@
-name: Run Instagram Scraper
+name: Instagram Scraper
 
 on:
   workflow_dispatch:
     inputs:
       profile_url:
-        description: "Instagram profile URL"
+        description: 'Instagram Profile URL'
         required: true
       start_date:
+        description: 'Start Date (YYYY-MM-DD)'
         required: true
       end_date:
+        description: 'End Date (YYYY-MM-DD)'
         required: true
       username:
+        description: 'Instagram Username'
         required: true
       password:
+        description: 'Instagram Password'
         required: true
 
 jobs:
   scrape:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
 
-      - name: Install dependencies
-        run: |
-          pip install selenium pandas
+    - name: Install dependencies
+      run: |
+        pip install --upgrade pip
+        pip install pandas selenium streamlit
 
-      # 🟢 Install Microsoft Edge and EdgeDriver
-      - name: Setup Edge
-        run: |
-          sudo apt update
-          sudo apt install -y microsoft-edge-stable unzip
-          EDGE_VERSION=$(microsoft-edge --version | awk '{print $3}' | cut -d '.' -f1)
-          wget https://msedgedriver.azureedge.net/${EDGE_VERSION}.0/edgedriver_linux64.zip
-          unzip edgedriver_linux64.zip -d $HOME/edgedriver
-          export PATH=$PATH:$HOME/edgedriver
-
-      - name: Run Scraper
-        run: python scraper.py
-
-      - name: Upload scraped CSV
-        uses: actions/upload-artifact@v4
-        with:
-          name: scraped_data
-          path: "*.csv"
+    - name: Run scraper
+      run: |
+        python scraper.py \
+          "${{ github.event.inputs.profile_url }}" \
+          "${{ github.event.inputs.start_date }}" \
+          "${{ github.event.inputs.end_date }}" \
+          "${{ github.event.inputs.username }}" \
+          "${{ github.event.inputs.password }}"
