--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -34,14 +34,20 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install --upgrade pip
-        pip install pandas selenium streamlit
+        python -m pip install --upgrade pip
+        pip install pandas selenium
 
     - name: Run scraper
+      shell: pwsh
       run: |
-        python scraper.py \
-          "${{ github.event.inputs.profile_url }}" \
-          "${{ github.event.inputs.start_date }}" \
-          "${{ github.event.inputs.end_date }}" \
-          "${{ github.event.inputs.username }}" \
-          "${{ github.event.inputs.password }}"
+        python scraper.py "${{ github.event.inputs.profile_url }}" `
+                             "${{ github.event.inputs.start_date }}" `
+                             "${{ github.event.inputs.end_date }}" `
+                             "${{ github.event.inputs.username }}" `
+                             "${{ github.event.inputs.password }}"
+
+    - name: Upload scraped CSV as artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: scraped_data
+        path: '*.csv'
