--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -52,3 +52,10 @@ jobs:
       with:
         name: click-error-screenshot
         path: click_error.png
+        
+    - name: Upload second screenshot artifact
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: click-error-screenshot-1
+        path: click_error1.png
