--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -18,6 +18,9 @@ on:
       password:
         description: 'Instagram Password'
         required: true
+      artifact_name:
+        description: 'Unique artifact name for this run'
+        required: true
 
 jobs:
   scrape:
@@ -38,12 +41,12 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run scraper
-      run: python scraper.py "${{ github.event.inputs.profile_url }}" "${{ github.event.inputs.start_date }}" "${{ github.event.inputs.end_date }}" "${{ github.event.inputs.username }}" "${{ github.event.inputs.password }}"
+      run: python scraper.py "${{ github.event.inputs.profile_url }}" "${{ github.event.inputs.start_date }}" "${{ github.event.inputs.end_date }}" "${{ github.event.inputs.username }}" "${{ github.event.inputs.password }}" "${{ github.event.inputs.artifact_name }}"
 
     - name: Upload scraped CSV as artifact
       uses: actions/upload-artifact@v4
       with:
-        name: scraped_data
+        name: ${{ github.event.inputs.artifact_name }}
         path: "*.csv"
 
     - name: Upload screenshot artifact
