--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit>=1.30.0
+streamlit>=1.50.0
 pandas>=2.0.0
 openpyxl>=3.1.2
-selenium>=4.11.2
-torch==2.2.0+cpu
-torchvision==0.16.0+cpu
-torchaudio==2.2.0+cpu
-transformers>=4.40.0
-emoji>=2.2.0
-tqdm>=4.65.0
-requests>=2.31.0
+selenium>=4.36.0
+torch==2.9.0
+torchvision==0.16.0
+torchaudio==2.2.0
+transformers>=4.57.1
+emoji>=2.15.0
+tqdm>=4.67.1
+requests>=2.32.5
