--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       profile_url:
-        description: 'Instagram Profile URL'
+        description: 'Instagram Profile URL or username'
         required: true
       start_date:
         description: 'Start Date (YYYY-MM-DD)'
@@ -27,25 +27,51 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    # ------------------------------
+    # 🟢 Cache pip dependencies
+    # ------------------------------
+    - name: Cache pip
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
+    # ------------------------------
+    # Set up Python
+    # ------------------------------
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
 
+    # ------------------------------
+    # Install dependencies
+    # ------------------------------
     - name: Install dependencies
       run: |
         pip install --upgrade pip
         pip install -r requirements.txt
 
+    # ------------------------------
+    # Run scraper
+    # ------------------------------
     - name: Run scraper
       run: python scraper.py "${{ github.event.inputs.profile_url }}" "${{ github.event.inputs.start_date }}" "${{ github.event.inputs.end_date }}" "${{ github.event.inputs.username }}" "${{ github.event.inputs.artifact_name }}"
 
+    # ------------------------------
+    # Upload scraped CSV
+    # ------------------------------
     - name: Upload scraped CSV as artifact
       uses: actions/upload-artifact@v4
       with:
         name: ${{ github.event.inputs.artifact_name }}
         path: "*.csv"
 
+    # ------------------------------
+    # Upload first screenshot if any
+    # ------------------------------
     - name: Upload screenshot artifact
       if: always()
       uses: actions/upload-artifact@v4
@@ -53,6 +79,9 @@ jobs:
         name: click-error-screenshot
         path: click_error.png
 
+    # ------------------------------
+    # Upload second screenshot if any
+    # ------------------------------
     - name: Upload second screenshot artifact
       if: always()
       uses: actions/upload-artifact@v4
