--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -28,23 +28,23 @@ jobs:
       uses: actions/checkout@v3
 
     # ------------------------------
-    # 🟢 Cache pip dependencies
-    # ------------------------------
-    - name: Cache pip
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
-    # ------------------------------
     # Set up Python
     # ------------------------------
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
+
+    # ------------------------------
+    # 🟢 Cache pip dependencies (Windows path)
+    # ------------------------------
+    - name: Cache pip
+      uses: actions/cache@v4
+      with:
+        path: C:\Users\runneradmin\AppData\Local\pip\Cache
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
 
     # ------------------------------
     # Install dependencies
